# bone-math

./: README.md  bone-math.code-workspace  pyproject.toml
resources/: pole_angle_visualizer.blend
src/bone_math/: __init__.py  blender_manifest.toml  gui.py  operators.py  pole_angle.py
tests/fixtures/: ik_bone_chains.blend  pole_angle_visualizer.blend
