[project]
name = "bone-math"
version = "0.1.0"
description = "Blender add-on with operators and math functions for working with bones and rigs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "fake-bpy-module>=20251003",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
unfixable = ["F401"]
